--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -73,3 +73,16 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+    
+sensio_framework_extra:
+    request: { converters: true }
+    view: { annotations: false }
+    
+fos_rest:
+    body_converter:
+        enabled: true
+    view:
+        view_response_listener: force
+    format_listener:
+        rules:
+            - { path: '^/api',  priorities: ['json' ,'xml', 'html'], fallback_format: json, prefer_extension: true }
