--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,5 +1,5 @@
-myna65_elixir_relations:
-    resource: "@Myna65ElixirBundle/Controller/"
-    type:     annotation
-    prefix:   /
+myna65_elixir:
+    resource: "@Myna65ElixirBundle/Resources/config/routes.yml"
+    type:     rest
+    prefix:   /api
 
