--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,11 @@
 		"nelmio/api-doc-bundle" : "2.7.0"
 	},
 	"require-dev" : {
-		"sensio/generator-bundle" : "~2.3"
+		"sensio/generator-bundle" : "~2.3",
+		"phpunit/phpunit" : "4.5.0",
+		"phpunit/dbunit" : "1.3.1",
+		"doctrine/doctrine-fixtures-bundle" : "2.2.0",
+		"liip/functional-test-bundle" : "1.0.4"
 	},
 	"scripts" : {
 		"post-install-cmd" : [
